syntax = "proto3";

//import "google/protobuf/empty.proto";

package AiiiGRPC;


message CircleInfo {
    string colorCode = 1;
    int32 x = 2;
    int32 y = 3;
    bool isFinish = 4;
}


message CircleInfoList {
    repeated CircleInfo circleInfos = 1;
}


service ToDoService {
    rpc BidiCircleInfoData(stream CircleInfo) returns (stream CircleInfoList);

    //TODO:
    //把BidiCircleInfoData拆解成兩個方法

    //分別為
    //1.UnaryCircleInfoData => input: CircleInfo  output:null(回憶看看，在proto可以定位為何種型別)

    
    //2.ServerStreamCircleInfoData => input: CircleInfo  output:CircleInfoList
}
